@startuml

title __STATICS's Class Diagram__\n

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.executor {
      package org.fluentcodes.projects.elasticobjects.executor.statics {
        class ValuesContent {
            {static} # linkPattern : Pattern
            {static} # PROTOCOLS : Map<String, String>
            {static} - initProtocols()
        }
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.executor {
      package org.fluentcodes.projects.elasticobjects.executor.statics {
        class ValuesContentHtml {
            {static} + link()
        }
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.executor {
      package org.fluentcodes.projects.elasticobjects.executor.statics {
        class ValuesEO {
            {static} + set()
        }
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.executor {
      package org.fluentcodes.projects.elasticobjects.executor.statics {
        class ValuesMath {
            {static} + sin()
            {static} + cos()
            {static} + log()
        }
      }
    }
  }
  

  package org.fluentcodes.projects.elasticobjects {
    package org.fluentcodes.projects.elasticobjects.executor {
      package org.fluentcodes.projects.elasticobjects.executor.statics {
        class ValuesMisc {
            {static} # linkPattern : Pattern
            {static} # PROTOCOLS : Map<String, String>
            {static} - initProtocols()
            {static} + replace()
            {static} + upperFirstChar()
            {static} + setter()
            {static} + getter()
            {static} + getterIs()
            {static} + upper()
            {static} + lower()
            {static} + repeat()
            {static} + join()
            {static} + set()
        }
      }
    }
  }
  

  ValuesContent -up-|> ValueParamsHelper
  ValuesContentHtml -up-|> ValuesContent
  ValuesEO -up-|> ValueParamsHelper
  ValuesMath -up-|> ValueParamsHelper
  ValuesMisc -up-|> ValueParamsHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
